# euchre-server

./: README.md  euchre-server.cabal
app/: Euchre.hs  Main.hs
app/Euchre/: Connections.hs  Round.hs  Trump.hs  Types.hs  Utils.hs
src/Euchre/: Connections.hs  Round.hs  Trump.hs  Types.hs  Utils.hs
tests/Euchre/: RoundSpec.hs
