cabal-version:      2.4
name:               euchre-server
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:
    Euchre.Connections
    Euchre.Round
    Euchre.Trump
    Euchre.Types
    Euchre.Utils

  build-depends:
    , base                >=4.13.0.0
    , bytestring
    , lens
    , lens-regex-pcre
    , network
    , random-shuffle
    , relude
    , split
    , string-interpolate

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    FlexibleContexts
    MultiWayIf
    NumDecimals
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    TupleSections

executable euchre-server
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N

  -- threaded: not needed for concurrency, but exposes -N rtsopts (runtime system opts) option
  -- rtsopts=-N: allows threads to run in parallel on a multiprocessor or multicore machine

  -- Modules included in this executable, other than Main.

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base                >=4.13.0.0
    , bytestring
    , euchre-server
    , lens
    , lens-regex-pcre
    , network
    , random-shuffle
    , relude
    , split
    , string-interpolate

  hs-source-dirs:     app
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    FlexibleContexts
    MultiWayIf
    NumDecimals
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    TupleSections

test-suite specs
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  default-language:   Haskell2010
  other-modules:      Euchre.RoundSpec
  default-extensions:
    NoImplicitPrelude
    FlexibleContexts
    MultiWayIf
    NumDecimals
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    TupleSections

  hs-source-dirs:     tests
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , euchre-server
    , hspec
    , relude

  build-tool-depends: hspec-discover:hspec-discover ==2.*
