cabal-version:      3.0
name:               euchre-server
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  README.md

common shared
  build-depends:
    , base                >=4.13.0.0
    , bytestring
    -- , capability
    -- , generic-lens
    , lens
    , lens-regex-pcre
    , MonadRandom
    , network
    , random-shuffle
    , relude
    , split
    , string-interpolate

  default-language:   Haskell2010

  -- LANGUAGE extensions used by modules in this package.
  default-extensions:
    NoImplicitPrelude
    FlexibleContexts
    MultiWayIf
    NumDecimals
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    TupleSections

library
  import:          shared

  -- Modules included in this executable, other than Main.
  exposed-modules:
    Euchre.Connections
    Euchre.Round
    Euchre.Trump
    Euchre.Types
    Euchre.Utils

  hs-source-dirs:  src

executable euchre-server
  import:         shared
  main-is:        Main.hs
  build-depends:  euchre-server
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

  -- threaded: not needed for concurrency, but exposes -N rtsopts (runtime system opts) option
  -- rtsopts=-N: allows threads to run in parallel on a multiprocessor or multicore machine
  hs-source-dirs: app

test-suite specs
  import:             shared
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  default-language:   Haskell2010
  other-modules:      Euchre.RoundSpec
  hs-source-dirs:     tests
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , euchre-server
    , hspec

  build-tool-depends: hspec-discover:hspec-discover ==2.*
